Update for using UV

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,22 @@
-[build-system]
-requires = ["setuptools >= 65.5.0"]
-build-backend = "setuptools.build_meta"
-
 [project]
 name = "bemore"
-version = "0.0.0"
+version = "0.1.0"
 authors = [
     { name = "Thomas Satterly" }
 ]
 description = "A node-based editor"
 readme = "README.md"
-requires-python = ">=3.9"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent",
-]
 license = "MIT"
 license-files = ["LICENSE"]
+requires-python = ">=3.11"
+dependencies = [
+    "colorama>=0.4.6",
+    "networkx>=3.5",
+]
+
+[build-system]
+requires = ["setuptools >= 65.5.0"]
+build-backend = "setuptools.build_meta"
 
 [project.urls]
 Homepage = "https://github.com/simple-all/bemore"
@@ -24,3 +24,21 @@ Issues = "https://github.com/simple-all/bemore/issues"
 
 [tool.black]
 line-length = 100
+
+[dependency-groups]
+dev = [
+    "mypy>=1.18.2",
+    "pytest>=9.0.0",
+    "pytest-cov>=7.0.0",
+    "types-colorama>=0.4.15.20250801",
+    "types-networkx>=3.5.0.20251106",
+]
+
+[tool.pytest]
+addopts = ["--cov", "bemore", "--cov-report", "term-missing", "--cov-branch"]
+testpaths = [
+    "tests",
+]
+
+[tool.mypy]
+packages = ["bemore", "tests"]
