--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,15 +20,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install flake8 pytest mypy types-colorama types-networkx types-setuptools isort black networkx
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install uv
+      uses: astral-sh/setup-uv@v6
+    - name: Setup Project
+      run: uv sync
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -37,7 +32,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest ./tests
+        pytest
     - name: Test formatting
       run: |
         isort ./bemore
