--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ line-length = 100
 
 [dependency-groups]
 dev = [
+    "black>=25.9.0",
     "flake8>=7.3.0",
+    "isort>=7.0.0",
     "mypy>=1.18.2",
     "pytest>=9.0.0",
     "pytest-cov>=7.0.0",
