--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,32 +20,35 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: "Set up Python"
+      uses: actions/setup-python@v6
+      with:
+        python-version-file: ".python-version"
     - name: Install uv
       uses: astral-sh/setup-uv@v6
+      with:
+        version: "0.9.8"
     - name: Setup Project
-      run: uv sync
+      run: uv sync --locked --all-extras --dev
     - name: Lint with flake8
       run: |
-        source .venv/bin/activate
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        uv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        uv run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        source .venv/bin/activate
-        pytest
+        uv run pytest
     - name: Test formatting
       run: |
-        source .venv/bin/activate
-        isort ./bemore
-        isort ./tests
+        uv run isort ./bemore
+        uv run isort ./tests
 
-        black ./bemore
-        black ./tests
+        uv run black ./bemore
+        uv run black ./tests
 
         git diff --exit-code .
         exit $?
     - name: Test with mypy
       run: |
-        mypy --strict bemore tests
+        uv run mypy --strict bemore tests
